# OpenPlatform

./: .gitignore  README.md  mpu-6050.py  serial_gpio_readme.txt  servo_test.py  servo_test2.py
gk_bringup/: CMakeLists.txt  package.xml
gk_bringup/launch/: display_xacro.launch  ganken_kun_sim.launch
gk_control/: CMakeLists.txt  package.xml
gk_description/: CMakeLists.txt  README.md  package.xml
gk_gazebo/: CMakeLists.txt  package.xml
gk_gazebo/launch/: gazebo.launch
opr_bringup/: CMakeLists.txt  README.md  package.xml
opr_bringup/launch/: ganken_kun_sim.launch
opr_control/: CMakeLists.txt  README.md  package.xml
opr_control/config/: joint_trajectory_controller.yaml  position_controller.yaml
opr_control/launch/: effort_control.launch  position_control.launch  trajectory_control.launch
opr_description/: CMakeLists.txt  README.md  package.xml
opr_description/meshes/STL/LEGS/: ankle_pitch.stl
opr_description/meshes/version1/STL/ARMS/: body_to_arm.stl  hand.stl
opr_description/meshes/version1/STL/LEGS/: left_knee.stl  right_ankle.stl  right_knee.stl
opr_description/meshes/version3/DAE/: ankle_pitch_left.dae  ankle_pitch_right.dae  arm.dae  hand.dae  head.dae  independent_pitch.dae  shoulder.dae  slider_crank.dae  waist_roll_left.dae  waist_roll_right.dae
opr_description/meshes/version3/STL/: ankle_pitch_left.stl  ankle_pitch_right.stl  ankle_roll_left.stl  ankle_roll_right.stl  arm.stl  body.stl  hand.stl  head.stl  independent_pitch.stl  shoulder.stl  slider_crank.stl  waist_roll_left.stl  waist_roll_right.stl  waist_yaw.stl
opr_description/robots/: ganken_kun_v1.xacro  gankenkun_v1.xacro  gankenkun_v3.xacro
opr_description/urdf/: gazebo.xacro  materials.xacro
opr_description/urdf/arms/: arm.gazebo.xacro  left_arm.urdf.xacro  right_arm.urdf.xacro
opr_description/urdf/body/: body.urdf.xacro
opr_description/urdf/head/: head.gazebo.xacro  head.urdf.xacro
opr_description/urdf/legs/: left_leg.urdf.xacro  leg.gazebo.xacro  leg.transmission.xacro  right_leg.urdf.xacro
opr_description/urdf/version1/arms/: arm.transmission.xacro  left_arm.urdf.xacro  right_arm.urdf.xacro
opr_description/urdf/version1/body/: body.gazebo.xacro  body.urdf.xacro
opr_description/urdf/version1/head/: head.transmission.xacro  head.urdf.xacro
opr_description/urdf/version1/legs/: left_leg.urdf.xacro  right_leg.urdf.xacro
opr_description/urdf/version3/arms/: left_arm.urdf.xacro  right_arm.urdf.xacro
opr_description/urdf/version3/body/: body.urdf.xacro
opr_description/urdf/version3/head/: head.urdf.xacro
opr_description/urdf/version3/legs/: left_leg.urdf.xacro  right_leg.urdf.xacro
opr_description/urdf/version3/sensors/: camera.urdf.xacro
opr_description/urdf/version3/sensors/imu/: imu.urdf.xacro
opr_gazebo/: CMakeLists.txt  README.md  (+1 more)
(+331 files in other folders)
