<?xml version="1.0"?>
<package format="2">
  <name>gk_bringup</name>
  <version>0.0.0</version>
  <description>Ganken-Kun bring up package</description>

  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
