<?xml version="1.0"?>
<package format="2">
  <name>opr_control</name>
  <version>0.0.0</version>
  <description>Open Platform Robot_control package</description>

  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
